--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,46 @@
-osx_image: xcode11.6
-language: swift
-cache: cocoapods
-podfile: Example/Podfile
-before_install:
-- gem install cocoapods
-- pod install --project-directory=Example
-script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/PageTransition.xcworkspace -scheme PageTransitionExample -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+matrix:
+  include:
+    - language: swift
+        osx_image: xcode11.6
+        language: swift
+        cache: cocoapods
+        podfile: Example/Podfile
+        before_install:
+        - gem install cocoapods
+        - pod install --project-directory=Example
+        script:
+        - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace         Example/PageTransition.xcworkspace -scheme PageTransitionExample -sdk iphonesimulator13.5        ONLY_ACTIVE_ARCH=NO | xcpretty
+        - pod lib lint
+    - language: swift
+        osx_image: xcode11.6
+        language: swift
+        cache: cocoapods
+        podfile: Example/Podfile
+        before_install:
+        - gem install cocoapods
+        - pod install --project-directory=Example
+        script:
+        - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace         Example/PageTransition.xcworkspace -scheme PageTransitionExample -sdk iphonesimulator12.4        ONLY_ACTIVE_ARCH=NO | xcpretty
+        - pod lib lint
+    - language: swift
+        osx_image: xcode11.6
+        language: swift
+        cache: cocoapods
+        podfile: Example/Podfile
+        before_install:
+        - gem install cocoapods
+        - pod install --project-directory=Example
+        script:
+        - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace         Example/PageTransition.xcworkspace -scheme PageTransitionExample -sdk iphonesimulator11.4        ONLY_ACTIVE_ARCH=NO | xcpretty
+        - pod lib lint
+    - language: swift
+        osx_image: xcode11.6
+        language: swift
+        cache: cocoapods
+        podfile: Example/Podfile
+        before_install:
+        - gem install cocoapods
+        - pod install --project-directory=Example
+        script:
+        - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace         Example/PageTransition.xcworkspace -scheme PageTransitionExample -sdk iphonesimulator10.3        ONLY_ACTIVE_ARCH=NO | xcpretty
+        - pod lib lint
