--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_install:
 - gem install cocoapods
 - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace       Example/PageTransition.xcworkspace -scheme PageTransitionExample -sdiphonesimulator13.5        ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -allowProvisioningUpdates -enableCodeCoverage YES -workspace       Example/PageTransition.xcworkspace -scheme PageTransitionExample -sdiphonesimulator13.5        ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
