--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,9 @@ script:
   -scheme PageTransitionExample
   -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max,OS=13.5'
   ONLY_ACTIVE_ARCH=NO
+  CODE_SIGN_IDENTITY=""
+  CODE_SIGNING_REQUIRED="NO"
+  CODE_SIGN_ENTITLEMENTS=""
+  CODE_SIGNING_ALLOWED="NO"
   | xcpretty
 - pod lib lint
